smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-with-text-block-key.smithy
// Syntax error at line 2, column 10: Expected one of IDENTIFIER, STRING('"'); but found TEXT_BLOCK('"""\nfoo"""') | Model
metadata """
foo""" = "baz"
